@@ -695,14 +695,18 @@ public:
         int pipefd[2];
         EXPECT_TRUE(pipe(pipefd) == 0);
         EXPECT_NO_THROW(ifacemgr->addExternalSocket(pipefd[0],
-                        [&callback_ok](){ callback_ok = true; }));
+                        [&callback_ok, &pipefd](int fd) {
+                            callback_ok = (pipefd[0] == fd);
+                        }));
 
 
         // Let's create a second pipe and register it as well
         int secondpipe[2];
         EXPECT_TRUE(pipe(secondpipe) == 0);
         EXPECT_NO_THROW(ifacemgr->addExternalSocket(secondpipe[0],
-                        [&callback2_ok](){ callback2_ok = true; }));
+                        [&callback2_ok, &secondpipe](int fd) {
+                            callback2_ok = (secondpipe[0] == fd);
+                        }));
 
         // Verify a call with no data and normal external sockets works ok.
         Pkt4Ptr pkt4;
@@ -778,14 +782,18 @@ public:
         int pipefd[2];
         EXPECT_TRUE(pipe(pipefd) == 0);
         EXPECT_NO_THROW(ifacemgr->addExternalSocket(pipefd[0],
-                        [&callback_ok](){ callback_ok = true; }));
+                        [&callback_ok, &pipefd](int fd) {
+                            callback_ok = (pipefd[0] == fd);
+                        }));
 
 
         // Let's create a second pipe and register it as well
         int secondpipe[2];
         EXPECT_TRUE(pipe(secondpipe) == 0);
         EXPECT_NO_THROW(ifacemgr->addExternalSocket(secondpipe[0],
-                        [&callback2_ok](){ callback2_ok = true; }));
+                        [&callback2_ok, &secondpipe](int fd) {
+                            callback2_ok = (secondpipe[0] == fd);
+                        }));
 
         // Verify a call with no data and normal external sockets works ok.
         Pkt6Ptr pkt6;
@@ -2749,11 +2757,11 @@ TEST_F(IfaceMgrTest, detectIfaces) {
 volatile bool callback_ok;
 volatile bool callback2_ok;
 
-void my_callback(void) {
+void my_callback(int /* fd */) {
     callback_ok = true;
 }
 
-void my_callback2(void) {
+void my_callback2(int /* fd */) {
     callback2_ok = true;
 }
 
