@@ -139,6 +139,13 @@ public:
     /// @return true if transaction has been initiated, false otherwise.
     bool isTransactionOngoing() const;
 
+    /// @brief Checks if a socket descriptor belongs to this connection.
+    ///
+    /// @param socket_fd socket descriptor to check
+    ///
+    /// @return True if the socket fd belongs to this connection.
+    bool isMySocket(int socket_fd) const;
+
     /// @brief Checks and logs if premature transaction timeout is suspected.
     ///
     /// There are cases when the premature timeout occurs, e.g. as a result of
@@ -439,6 +446,44 @@ public:
         queue_.clear();
     }
 
+    /// @brief Closes a connection if it has an out-of-bandwidth socket event
+    ///
+    /// If the pool contains a connection using the given socket and that
+    /// connection is currently in a transaction the method returns as this
+    /// indicates a normal ready event.  If the connection is not in an
+    /// ongoing transaction, then the connection is closed.
+    ///
+    /// This is method is intended to be used to detect and clean up then
+    /// sockets that are marked ready outside of transactions. The most comman
+    /// case is the other end of the socket being closed.
+    ///
+    /// @param socket_fd socket descriptor to check
+    void closeIfOutOfBandwidth(int socket_fd) {
+        // First we look for a connection with the socket.
+        for (auto conns_it = conns_.begin(); conns_it != conns_.end();
+             ++conns_it) {
+
+            if (!conns_it->second->isMySocket(socket_fd)) {
+                // Not this connection.
+                continue;
+            }
+
+            if (conns_it->second->isTransactionOngoing()) {
+                // Matches but is in a transaction, all is well.
+                return;
+            }
+
+            // Socket has no transaction, so any ready event is
+            // out-of-bandwidth (other end probably closed), so
+            // let's close it.  Note we do not remove any queued
+            // requests, as this might somehow be occurring in
+            // between them.
+            conns_it->second->close();
+            conns_.erase(conns_it);
+            break;
+        }
+    }
+
 private:
 
     /// @brief Holds reference to the IO service.
@@ -605,6 +650,11 @@ Connection::close() {
 bool
 Connection::isTransactionOngoing() const {
     return (static_cast<bool>(current_request_));
+}
+
+bool
+Connection::isMySocket(int socket_fd) const {
+    return (socket_.getNative() == socket_fd);
 }
 
 bool
@@ -921,6 +971,11 @@ HttpClient::asyncSendRequest(const Url& url, const HttpRequestPtr& request,
 
     impl_->conn_pool_->queueRequest(url, request, response, request_timeout.value_,
                                     request_callback, connect_callback, close_callback);
+}
+
+void
+HttpClient::closeIfOutOfBandwidth(int socket_fd)  {
+    return (impl_->conn_pool_->closeIfOutOfBandwidth(socket_fd));
 }
 
 void
